--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,11 @@ on:
   pull_request:
     branches:
       - develop
+
+strategy:
+  matrix:
+    go: ['1.23.5','1.23.6']
+
 jobs:
   check-application:
     runs-on: ubuntu-latest
@@ -10,6 +15,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: 1.23.6
+          go-version: ${{ matrix.go }}
       - run: go test ./...
       - run: go run math.go
