--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,14 +4,14 @@ on:
     branches:
       - develop
 
-  strategy:
-    matrix:
-      go: ['1.23.5','1.23.6']
-
 jobs:
-
+  build:
+  
   check-application:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: ['1.23.5','1.23.6']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
