--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
         uses: docker/build-push-action@v1
         with:
           push: true
-          tags: alexandreLeyLima/ci-go:latest
+          tags: alexandreleylima/ci-go:latest
